Fix typos in hw1

--- a/hw1.ipynb
+++ b/hw1.ipynb
@@ -104,6 +104,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "nbgrader": {
      "grade": false,
      "grade_id": "1a-A",
@@ -137,6 +138,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "nbgrader": {
      "grade": true,
      "grade_id": "1a-T",
@@ -208,6 +210,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "nbgrader": {
      "grade": true,
      "grade_id": "1b-Ta",
@@ -256,6 +259,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "nbgrader": {
      "grade": true,
      "grade_id": "1c-A1",
@@ -348,9 +352,7 @@
     "    e^M = \\sum_{k=0}^{\\infty}\\frac{M^k}{k!}.\n",
     "$$\n",
     "\n",
-    "where $M^0=I$ (the $N\\times N$ identity matrix). Write a function that takes in a matrix $M$ and an integer $l$, and evaluates an approximation of $e^M$ using powers of $M$ up to $M^l$.\n",
-    "\n",
-    "Compare your answer with the output of the appropriate `scipy.linalg` method."
+    "where $M^0=I$ (the $N\\times N$ identity matrix). Write a function that takes in a matrix $M$ and an integer $l$, and evaluates an approximation of $e^M$ using powers of $M$ up to $M^l$."
    ]
   },
   {
@@ -395,7 +397,6 @@
     "# Do not delete this:\n",
     "A = numpy.array([[1, 2], [3, 4]])\n",
     "error = compute_matrix_exp(A, 1000) - scipy.linalg.expm(A)\n",
-    "numpy.linalg.norm(error)\n",
     "assert(numpy.linalg.norm(error, numpy.infty) < 1e-6)\n",
     "print(\"Success!\")"
    ]
@@ -431,6 +432,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "nbgrader": {
      "grade": true,
      "grade_id": "1c-A1",
@@ -459,6 +461,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "nbgrader": {
      "grade": true,
      "grade_id": "1c-A1",
@@ -510,6 +513,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "nbgrader": {
      "grade": true,
      "grade_id": "3a-A2",
@@ -550,6 +554,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "nbgrader": {
      "grade": true,
      "grade_id": "3b-A2",
